--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-global_compileSdkVersion = 21
-global_buildToolsVersion = "25.0.0"
+global_compileSdkVersion=8
+global_buildToolsVersion="28.0.0"
 global_minSdkVersion = 10
-global_targetSdkVersion = 21
+global_targetSdkVersion=28
